force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/BrillioFC__Apex_Trigger_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Apex Trigger Detail</label>
    <nameField>
        <label>Apex Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Apex Trigger Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>