force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__ColorCode__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ColorCode__c</fullName>
    <formula>IF(BrillioFC__ComplexityCount__c&gt;150, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &apos;Red&apos;),
IF(BrillioFC__ComplexityCount__c&gt;40,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &apos;Yellow&apos;),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &apos;Green&apos;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Code</label>
    <type>Text</type>
</CustomField>