force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__ComplexityCount__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ComplexityCount__c</fullName>
    <formula>IF( BrillioFC__API_Version__c &lt;38 , 10, 0) +( IF( BrillioFC__Code_Coverage__c &lt;75, 10, 0) +BrillioFC__NumofDesignIssues__c*10)+(BrillioFC__NumSecurityIssues__c*15)+(BrillioFC__NumPerfomanceIssues__c*20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>