force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__NameSpace__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NameSpace__c</fullName>
    <label>NameSpace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>