force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__NumLinesCovered__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NumLinesCovered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Lines Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>