force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__NumOthersIssues__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NumOthersIssues__c</fullName>
    <label>Number of Other Code Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>