force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>