force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__Status__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>