force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__Trigger_Methods__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Trigger_Methods__c</fullName>
    <label>Trigger Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>