force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__UsageAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsageAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>