force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__UsageAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsageAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>