force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__UsageAfterUnDelete__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsageAfterUnDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After UnDelete</label>
    <type>Checkbox</type>
</CustomField>