force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__UsageAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsageAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>