force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__UsageBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsageBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>