force-app/main/default/objects/BrillioFC__Apex_Trigger_Detail__c/fields/BrillioFC__UsageBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsageBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>